--- a/test/integration/targets/aci_bd_subnet/tasks/main.yml
+++ b/test/integration/targets/aci_bd_subnet/tasks/main.yml
@@ -94,20 +94,20 @@
   assert:
     that:
       - create_check_mode.changed == true
-      - 'create_check_mode.config == {"fvSubnet": {"attributes": {"descr": "Ansible Test", "ip": "10.100.100.1/24", "name": "anstest"}}}'
+      - 'create_check_mode.sent == {"fvSubnet": {"attributes": {"descr": "Ansible Test", "ip": "10.100.100.1/24", "name": "anstest"}}}'
       - create_subnet.changed == true
-      - 'create_subnet.config == {"fvSubnet": {"attributes": {"descr": "Ansible Test", "ip": "10.100.100.1/24", "name": "anstest"}}}'
+      - 'create_subnet.sent == {"fvSubnet": {"attributes": {"descr": "Ansible Test", "ip": "10.100.100.1/24", "name": "anstest"}}}'
       - 'create_subnet.previous == []'
       - create_subnet2.changed == true
-      - create_subnet2.config == create_subnet2.proposed
-      - 'create_subnet2.config.fvSubnet.attributes.scope == "private,shared"'
-      - 'create_subnet2.config.fvSubnet.children.0.fvRsBDSubnetToProfile.attributes == {"tnL3extOutName": "default", "tnRtctrlProfileName": "default"}'
+      - create_subnet2.sent == create_subnet2.proposed
+      - 'create_subnet2.sent.fvSubnet.attributes.scope == "private,shared"'
+      - 'create_subnet2.sent.fvSubnet.children.0.fvRsBDSubnetToProfile.attributes == {"tnL3extOutName": "default", "tnRtctrlProfileName": "default"}'
       - create_idempotency.changed == false
       - create_idempotency.previous != []
       - modify_subnet.changed == true
       - modify_subnet.previous != []
       - modify_subnet.changed != modify_subnet.proposed
-      - 'modify_subnet.config == {"fvSubnet": {"attributes": {"ctrl": "querier", "scope": "public,shared"}}}'
+      - 'modify_subnet.sent == {"fvSubnet": {"attributes": {"ctrl": "querier", "scope": "public,shared"}}}'
       - create_bad_scope.failed == true
       - 'create_bad_scope.msg.startswith("value of scope must be one of")'
       - create_incomplete_data.failed == true
