Fixed conflict between uri and setup_influxdb

--- a/test/integration/targets/uri/tasks/main.yml
+++ b/test/integration/targets/uri/tasks/main.yml
@@ -88,6 +88,13 @@
     - "{{fail_checksum.results}}"
     - "{{fail.results}}"
 
+- name: ensure python modules for Older Python SNI verification are absent
+  pip:
+    name: "{{ item }}"
+    state: absent
+  with_items:
+    - ndg-httpsclient
+
 - name: test https fetch to a site with mismatched hostname and certificate
   uri:
     url: "https://{{ badssl_host }}/"
